--- a/platforms/browser/www/manifest.json
+++ b/platforms/browser/www/manifest.json
@@ -1,8 +1,8 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "TestFrameWork",
-  "short_name": "TestFrameWork",
+  "name": "FrameTest",
+  "short_name": "FrameTest",
   "version": "io.cordova.hellocordova",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "author": "Apache Cordova Team",
